--- a/assignments/index.html
+++ b/assignments/index.html
@@ -4,13 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Circle Enhancing</title>
+    <title>Personal Composition</title>
 </head>
 <body>
     <h1>Abdul Sankoh</h1>
-   <p>N220 Projects</p>  
-   <p>Fall 2021</p> 
+    <p>N220 Projects</p>
+    <p>Fall 2021</p>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.0/p5.min.js" integrity="sha512-N4kV7GkNv7QR7RX9YF/olywyIgIwNvfEe2nZtfyj73HdjCUkAfOBDbcuJ/cTaN04JKRnw1YG1wnUyNKMsNgg3g==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-    <script src= "js/app.js"></script>
+    <script src="js/app.js"></script>
+    
 </body>
 </html>
