Fixed Name of 2nd

--- a/mainSource.html
+++ b/mainSource.html
@@ -9,9 +9,19 @@
 <body>
     <h1>Abdul Sankoh</h1>
     <h2>Labs</h2>
+    <p>
+
+
+    </p>
     <h3>Assignments</h3>
     <p>
     <a href="https://asankoh.github.io/N220Coursework/assignments/index.html">Personal Composition</a>
+    <p>
+    <a href="https://asankoh.github.io/N220Coursework/assignments/animationExercise">Puck Side</a>
     </p>
+    <a href="https://asankoh.github.io/N220Coursework/assignments/animationExercise2">Counter</a>
+    </p>
+    <a href="https://asankoh.github.io/N220Coursework/assignments/animationExercise3">World Wrap</a>
+</p>
 </body>
 </html>
