--- a/mainSource.html
+++ b/mainSource.html
@@ -22,6 +22,11 @@
     <a href="https://asankoh.github.io/N220Coursework/assignments/animationExercise2">Counter</a>
     </p>
     <a href="https://asankoh.github.io/N220Coursework/assignments/animationExercise3">World Wrap</a>
+    <p>
+        <a href="https://asankoh.github.io/N220Coursework/loopsAssignment/loopsExercise.html">Circles in a Circle</a>
+        <a href="https://asankoh.github.io/N220Coursework/loopsAssignment/loopsExercise2.html">FizzBuzz</a>
+        <a href="https://asankoh.github.io/N220Coursework/loopsAssignment/loopsExercise3.html">Pyramid</a>
+    </p>
 </p>
 </body>
 </html>
