--- a/mainSource.html
+++ b/mainSource.html
@@ -26,7 +26,14 @@
         <a href="https://asankoh.github.io/N220Coursework/loopsAssignment/loopsExercise.html">Circles in a Circle</a>
         <a href="https://asankoh.github.io/N220Coursework/loopsAssignment/loopsExercise2.html">FizzBuzz</a>
         <a href="https://asankoh.github.io/N220Coursework/loopsAssignment/loopsExercise3.html">Pyramid</a>
-    </p>
+     <p>
+         <a href="https://asankoh.github.io/N220Coursework/arrayAssignments/arraysAssignment.html">NeoIceCream</a>
+         <a href="https://asankoh.github.io/N220Coursework/arrayAssignments/arraysAssignment2.html">Snake</a>
+         <a href="https://asankoh.github.io/N220Coursework/arrayAssignments/arraysAssignment3.html">RotatingLoading</a>
+
+    
+        </p>
+     </p>
 </p>
 </body>
 </html>
