--- a/mainSource.html
+++ b/mainSource.html
@@ -33,6 +33,12 @@
 
     
         </p>
+        <p>
+         <a href="https://asankoh.github.io/N220Coursework/domAssignments/peakPixels.html">Peak Pixels</a>
+         <a href="https://asankoh.github.io/N220Coursework/domAssignments/PersonalComp.html">PersonalComp</a>
+         <a href="https://asankoh.github.io/N220Coursework/domAssignments/thatsalotofDivs.html/">LotsofDivs</a>
+         "></a>
+        </p>
      </p>
 </p>
 </body>
