--- a/mainSource.html
+++ b/mainSource.html
@@ -38,6 +38,11 @@
          <a href="https://asankoh.github.io/N220Coursework/domAssignments/PersonalComp.html">PersonalComp</a>
          <a href="https://asankoh.github.io/N220Coursework/domAssignments/thatsalotofDivs.html/">LotsofDivs</a>
          "></a>
+         <p>
+             <a href="https://asankoh.github.io/N220Coursework/objectsAssignment/animatedObject.html">AnimatedObject</a>
+             <a href="https://asankoh.github.io/N220Coursework/objectsAssignment/dataDriven.html">Data Driven</a>
+             <a href="https://asankoh.github.io/N220Coursework/objectsAssignment/PersonalCompOb.html">Personal Comp</a>
+         </p>
         </p>
      </p>
 </p>
