--- a/domAssignments/personalComp.html
+++ b/domAssignments/personalComp.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>sigh</title>
 </head>
 <body>
-    <div id="square" onclick="pressSquare()"></div>
-
-    <script src="js/app2.js"></script>
+    <div id="image" onmousewheel="changeSomething()"></div>
+<script src="js/app3.js"></script>
+    
 </body>
 </html>
