--- a/domAssignments/OverandOut.html
+++ b/domAssignments/OverandOut.html
@@ -8,8 +8,7 @@
     
 </head>
 <body>
-    <div id = "square" onclick= "square()"></div>
+    <div id="square" onmouseover="hoverSquare()"></div>
     <script src="js/app.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.0/p5.min.js"></script>
 </body>
 </html>
