--- a/mainSource.html
+++ b/mainSource.html
@@ -34,8 +34,8 @@
     
         </p>
         <p>
-         <a href="https://asankoh.github.io/N220Coursework/domAssignments/peakPixels.html">Peak Pixels</a>
-         <a href="https://asankoh.github.io/N220Coursework/domAssignments/PersonalComp.html">PersonalComp</a>
+         <a href="https://asankoh.github.io/N220Coursework/domAssignments/OverandOut.html">OverandOut</a>
+         <a href="https://asankoh.github.io/N220Coursework/domAssignments/personalComp.html">PersonalComp</a>
          <a href="https://asankoh.github.io/N220Coursework/domAssignments/thatsalotofDivs.html/">LotsofDivs</a>
          "></a>
          <p>
