--- a/domAssignments/OverandOut.html
+++ b/domAssignments/OverandOut.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <div id="square" onmouseover="hoverSquare()"></div>
+    <div onmouseout="offSquare()"></div>
     <script src="js/app.js"></script>
 </body>
 </html>
