--- a/domAssignments/peakPixels.html
+++ b/domAssignments/peakPixels.html
@@ -6,10 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-
 <body>
-    <div id="square" onmouseover="multiplySquare()"></div>
-
-    <script src="js/app2.js"></script>
+    <div id="square" onclick="growSquare()"></div>
+    <script src="js/app4.js"></script>
 </body>
 </html>
