--- a/mainSource.html
+++ b/mainSource.html
@@ -36,7 +36,7 @@
         <p>
          <a href="https://asankoh.github.io/N220Coursework/domAssignments/OverandOut.html">OverandOut</a>
          <a href="https://asankoh.github.io/N220Coursework/domAssignments/personalComp.html">PersonalComp</a>
-         <a href="https://asankoh.github.io/N220Coursework/domAssignments/thatsalotofDivs.html/">LotsofDivs</a>
+         <a href="https://asankoh.github.io/N220Coursework/domAssignments/peakPixels.html">peakPixels</a>
          "></a>
          <p>
              <a href="https://asankoh.github.io/N220Coursework/objectsAssignment/animatedObject.html">AnimatedObject</a>
