--- a/userInput/greeter.html
+++ b/userInput/greeter.html
@@ -4,11 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    
+    <title>Greetings, Young Chap</title>
 </head>
 <body>
-    <div id="square" onmouseover="hoverSquare()"></div>
-    <script src="js/app.js"></script>
+
+    <input id="txtInput">
+    <button onclick ="greet()">Greetings!</button>
+<script src="js/app.js"></script>
+
 </body>
 </html>
