--- a/userInput/passwordProtected.html
+++ b/userInput/passwordProtected.html
@@ -5,10 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    
 </head>
 <body>
-    <div id="square" onmouseover="hoverSquare()"></div>
-    <script src="js/app.js"></script>
+    <input id="Username">
+    <input id="Password">
+    <button onclick="click">Click</button>
 </body>
 </html>
