--- a/userInput/tipCalculator.html
+++ b/userInput/tipCalculator.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    
+    <title>Calculator</title>
 </head>
 <body>
-    <div id="square" onmouseover="hoverSquare()"></div>
-    <script src="js/app.js"></script>
+    <input id="tipInput">
+    <button onclick="calculate()">Total</button>
+<script src="js/app2.js"></script>
 </body>
 </html>
