--- a/mainSource.html
+++ b/mainSource.html
@@ -46,5 +46,11 @@
         </p>
      </p>
 </p>
+
+<p>
+<a href="https://asankoh.github.io/N220Coursework/userInput/greeter.html">Greetings</a>
+<a href="https://asankoh.github.io/N220Coursework/userInput/passwordProtected.html"></a>
+<a href="https://asankoh.github.io/N220Coursework/userInput/tipCalculator.html"></a>
+</p>
 </body>
 </html>
