--- a/mainSource.html
+++ b/mainSource.html
@@ -49,8 +49,8 @@
 
 <p>
 <a href="https://asankoh.github.io/N220Coursework/userInput/greeter.html">Greetings</a>
-<a href="https://asankoh.github.io/N220Coursework/userInput/passwordProtected.html"></a>
-<a href="https://asankoh.github.io/N220Coursework/userInput/tipCalculator.html"></a>
+<a href="https://asankoh.github.io/N220Coursework/userInput/passwordProtected.html">Password</a>
+<a href="https://asankoh.github.io/N220Coursework/userInput/tipCalculator.html">Calculator</a>
 </p>
 </body>
 </html>
