--- a/functionAssignment/randomNumber.html
+++ b/functionAssignment/randomNumber.html
@@ -7,8 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    
-    <button onclick="meeples"></button>
-     
+    <script src="js/app2.js"></script>
+    <button onclick ="generate()">Generate</button>
 </body>
 </html>
