--- a/mainSource.html
+++ b/mainSource.html
@@ -52,5 +52,10 @@
 <a href="https://asankoh.github.io/N220Coursework/userInput/passwordProtected.html">Password</a>
 <a href="https://asankoh.github.io/N220Coursework/userInput/tipCalculator.html">Calculator</a>
 </p>
+<p>
+    <a href="https://asankoh.github.io/N220Coursework/functionAssignment/DivisiblebySeven.html">Seven</a>
+<a href="https://asankoh.github.io/N220Coursework/functionAssignment/cleanUp.html"></a>
+<a href="https://asankoh.github.io/N220Coursework/functionAssignment/randomNumber.html"></a>
+</p>
 </body>
 </html>
