--- a/functionAssignment/randomNumber.html
+++ b/functionAssignment/randomNumber.html
@@ -9,5 +9,7 @@
 <body>
     <script src="js/app2.js"></script>
     <button onclick ="generate()">Generate</button>
+    <div id="divDisplay"></div>
+
 </body>
 </html>
