--- a/functionAssignment/showInfo.html
+++ b/functionAssignment/showInfo.html
@@ -7,6 +7,10 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <script src="js/app3.js"></script>
+    <button onclick="homeButton()">Home</button>
+    <button onclick="AboutButton()">About</button>
+    <button onclick="HelloButton()">Hello</button>
+<div id="dvDisplay"></div>
 </body>
 </html>
