--- a/functionAssignment/cleanUp.html
+++ b/functionAssignment/cleanUp.html
@@ -7,9 +7,10 @@
     <title>Document</title>
 </head>
 <body>
-    <button onclick ="generate()">Generate</button>
-    <div id="divDisplay"></div>
-    <script src="js/app2.js"></script>
+    <div id="dvDisplay"></div>
+    <input id="txtInput">
+<button onclick="pressButton()">Press</button>
+<script src="js/app4.js"></script>
 
 </body>
 </html>
