--- a/functionAssignment/showInfo.html
+++ b/functionAssignment/showInfo.html
@@ -7,10 +7,11 @@
     <title>Document</title>
 </head>
 <body>
-    <script src="js/app3.js"></script>
     <button onclick="homeButton()">Home</button>
-    <button onclick="AboutButton()">About</button>
-    <button onclick="HelloButton()">Hello</button>
+    <button onclick="aboutButton()">About</button>
+    <button onclick="helloButton()">Hello</button>
 <div id="dvDisplay"></div>
+<script src="js/app3.js"></script>
+
 </body>
 </html>
