--- a/mainSource.html
+++ b/mainSource.html
@@ -56,6 +56,8 @@
     <a href="https://asankoh.github.io/N220Coursework/functionAssignment/DivisiblebySeven.html">Seven</a>
 <a href="https://asankoh.github.io/N220Coursework/functionAssignment/cleanUp.html"></a>
 <a href="https://asankoh.github.io/N220Coursework/functionAssignment/randomNumber.html"></a>
+<a href="https://asankoh.github.io/N220Coursework/functionAssignment/showInfo.html"></a>
+
 </p>
 </body>
 </html>
