--- a/mainSource.html
+++ b/mainSource.html
@@ -59,5 +59,13 @@
 <a href="https://asankoh.github.io/N220Coursework/functionAssignment/showInfo.html"></a>
 
 </p>
+
+<p>
+<a href="https://asankoh.github.io/N220Coursework/arrayComp/average.html">Average</a>
+<a href="https://asankoh.github.io/N220Coursework/arrayComp/badwordCatcher2.html">Bad Word Catcher</a>
+<a href="https://asankoh.github.io/N220Coursework/arrayComp/wordCatcher.html">Bad Word Catcher 2</a>
+
+
+</p>
 </body>
 </html>
