--- a/arrayComp/average.html
+++ b/arrayComp/average.html
@@ -7,8 +7,11 @@
     <title>Document</title>
 </head>
 <body>
-    <input id="txtInput">
+    <div id="dvText"></div>
+    <input id="txtInput" placeholder="Find the Mean!">
     <button onclick="average()">Find Average!</button>
+   
+   
     <script src="js/app.js"></script>
 </body>
 </html>
