--- a/arrayComp/average.html
+++ b/arrayComp/average.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div id="dvText"></div>
-    <input id="txtInput" placeholder="Find the Mean!">
+    <input id="txtInput" placeholder="Find the Mean!"><br>
     <button onclick="average()">Find Average!</button>
    
    
