--- a/arrayComp/wordCatcher.html
+++ b/arrayComp/wordCatcher.html
@@ -7,6 +7,9 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <div id="dvText"></div>
+    <button onclick="search()">Press!</button>
+    <input id="txtInput">
+    <script src="js/app2.js"></script>
 </body>
 </html>
