--- a/eventsAssignment/colorChanger.html
+++ b/eventsAssignment/colorChanger.html
@@ -7,7 +7,12 @@
     <title>Document</title>
 </head>
 <body>
-    <div id=""></div>
+
+    <div id="eventChange" data-color="Change!">Click!</div>
+    <div id="eventChange" data-color="Change!">Oh!</div>
+    <div id="eventChange" data-color="Change!">Wow!!!!!</div>
+
+    <div onclick="itsChange(event)" data-color="Wow!">Click</div>
     <script src="js/app.js"></script>
 </body>
 </html>
