--- a/eventsAssignment/flashCards.html
+++ b/eventsAssignment/flashCards.html
@@ -7,6 +7,12 @@
     <title>Document</title>
 </head>
 <body>
+
+    <div id="eventChange" data-color="Change!">What's the Capital of Indiana?</div>
+    <div id="eventChange" data-color="Change!">Oh!</div>
+    <div id="eventChange" data-color="Change!">Wow!</div>
+
+    <div onclick="itsChange(event)" data-response="Wow!">Click</div>
     <script src="js/app3.js"></script>
 </body>
 </html>
