--- a/eventsAssignment/colorMixer.html
+++ b/eventsAssignment/colorMixer.html
@@ -7,6 +7,10 @@
     <title>Document</title>
 </head>
 <body>
-    <script src="js/app2.js"></script>
+
+    <div id="eventChange" data-color="Change!">Click</div>
+
+    <div onclick="itsChange(event)" data-response="Wow!">Click</div>
+    <script src="js/app3.js"></script>
 </body>
 </html>
