--- a/mainSource.html
+++ b/mainSource.html
@@ -67,5 +67,9 @@
 
 
 </p>
+
+<p>
+<a href="https://asankoh.github.io/N220Coursework/finalGame/ticTac.html">FinalProject</a>
+</p>
 </body>
 </html>
