--- a/mainSource.html
+++ b/mainSource.html
@@ -64,9 +64,9 @@
 <a href="https://asankoh.github.io/N220Coursework/arrayComp/average.html">Average</a>
 <a href="https://asankoh.github.io/N220Coursework/arrayComp/badwordCatcher2.html">Bad Word Catcher</a>
 <a href="https://asankoh.github.io/N220Coursework/arrayComp/wordCatcher.html">Bad Word Catcher 2</a>
-
-
 </p>
+
+<a href=""></a>
 
 <p>
 <a href="https://asankoh.github.io/N220Coursework/finalGame/ticTacToe.html">FinalProject</a>
