--- a/eventsAssignment/colorChanger.html
+++ b/eventsAssignment/colorChanger.html
@@ -7,12 +7,21 @@
     <title>Document</title>
 </head>
 <body>
+    <style>
+        div{
+            width: 200px;
+            height: 200px;
+            background-color: grey;
+            float: left;
+            border: 5px solid black;
 
-    <div id="eventChange" data-color="Change!">Click!</div>
-    <div id="eventChange" data-color="Change!">Oh!</div>
-    <div id="eventChange" data-color="Change!">Wow!!!!!</div>
+        }
+    </style>
 
-    <div onclick="itsChange(event)" data-color="Wow!">Click</div>
+   <div onclick="itsChange(event)" data-color="#FF0000">Click!</div>
+    <div onclick="itsChange(event)" data-color="#00FF00">Click</div>
+    <div onclick="itsChange(event)" data-color="#0000FF">Click</div>
+
     <script src="js/app.js"></script>
 </body>
 </html>
