--- a/mainSource.html
+++ b/mainSource.html
@@ -66,7 +66,11 @@
 <a href="https://asankoh.github.io/N220Coursework/arrayComp/wordCatcher.html">Bad Word Catcher 2</a>
 </p>
 
-<a href=""></a>
+<a href="https://asankoh.github.io/N220Coursework/eventsAssignment/colorChanger.html">Color Change</a>
+<a href="https://asankoh.github.io/N220Coursework/eventsAssignment/colorMixer.html">Color Mix</a>
+<a href="https://asankoh.github.io/N220Coursework/eventsAssignment/flashCards.html">Flash Cards</a>
+
+
 
 <p>
 <a href="https://asankoh.github.io/N220Coursework/finalGame/ticTacToe.html">FinalProject</a>
